CSFML/include/SFML/System/Time.h


//
// SFML - Simple and Fast Multimedia Library
// Copyright (C) 2007-2018 Laurent Gomila (laurent@sfml-dev.org)
//
// This software is provided 'as-is', without any express or implied warranty.
// In no event will the authors be held liable for any damages arising from the use of this software.
//
// Permission is granted to anyone to use this software for any purpose,
// including commercial applications, and to alter it and redistribute it freely,
// subject to the following restrictions:
//
// 1. The origin of this software must not be misrepresented;
//    you must not claim that you wrote the original software.
//    If you use this software in a product, an acknowledgment
//    in the product documentation would be appreciated but is not required.
//
// 2. Altered source versions must be plainly marked as such,
//    and must not be misrepresented as being the original software.
//
// 3. This notice may not be removed or altered from any source distribution.
//

#ifndef SFML_TIME_H
#define SFML_TIME_H

// Headers

#include <SFML/Config.h>

typedef struct
{
    sfInt64 microseconds;
} sfTime;

extern "C" sfTime sfTime_Zero;

extern "C" float sfTime_asSeconds(sfTime time);

extern "C" sfInt32 sfTime_asMilliseconds(sfTime time);

extern "C" sfInt64 sfTime_asMicroseconds(sfTime time);

extern "C" sfTime sfSeconds(float amount);

extern "C" sfTime sfMilliseconds(sfInt32 amount);

extern "C" sfTime sfMicroseconds(sfInt64 amount);

#endif // SFML_TIME_H